updated header and added images

--- a/monitor/web/parts/header.ejs
+++ b/monitor/web/parts/header.ejs
@@ -54,8 +54,8 @@
         <% if (isWebInterface) { %>
             <div class="c-sidebar-brand d-md-down-none">
                 <a href="/">
-                    <img class="c-sidebar-brand-full" src="img/txadmin.png" width="118" alt="txAdmin Logo">
-                    <img class="c-sidebar-brand-minimized" src="img/tx.png" width="30" height="30" alt="txAdmin Logo">
+                    <img class="c-sidebar-brand-full" src="img/txadmingold.png" width="118" alt="qb-Admin Logo">
+                    <img class="c-sidebar-brand-minimized" src="img/tx2.gif" width="30" height="30" alt="qb-Admin Logo">
                 </a>
             </div>
         <% } %>
@@ -247,9 +247,9 @@
     <!-- Center Content -->
     <div class="c-wrapper c-fixed-components">
         <!-- Header -->
-        <% if (isWebInterface) { %>
+        <!-- <% if (isWebInterface) { %>
             <header class="c-header c-header-light c-header-fixed c-header-with-subheader">
-                <!-- Zap Hosting Ad - Desktop -->
+                
                 <% if (dynamicAd) { %>
                     <a class="zapAdContainer d-md-down-none" href="<%= dynamicAd.linkDesktop %>" target="_blank" rel="noopener noreferrer">
                         <img class="zapLogo show-dark-mode" alt="zap hosting" src="<%= dynamicAd.logoDarkMode %>">
@@ -261,7 +261,7 @@
                             </svg>
                         </div>
                     </a>
-                <% } %>
+                <% } %> -->
 
                 <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar"
                     data-class="c-sidebar-show">
