--- a/monitor/web/parts/header.ejs
+++ b/monitor/web/parts/header.ejs
@@ -44,7 +44,7 @@
         }
     </style>
     <!-- injected consts -->
-    <!-- <script><%- jsInjection %></script> -->
+   <script><%- jsInjection %></script>
 </head>
 
 <body class="c-app <%= uiTheme %>">
