--- a/monitor/web/main/console.ejs
+++ b/monitor/web/main/console.ejs
@@ -42,10 +42,10 @@
     }
 
     .bg-dark {
-        background-color: #252E38 !important;
+        background-color: #141414 !important;
     }
 
-    .command-history {
+    /* .command-history {
         line-height: 2rem;
         display: inline-block;
     }
@@ -60,7 +60,7 @@
         background-color: transparent !important;
         color: rgb(183, 189, 199)!important;
         border: 1px solid rgb(183, 189, 199);
-    }
+    } */
 </style>
 
 
@@ -102,12 +102,7 @@
                     </div>
                 </form>
             </div>
-            <div class="col-xl-6 col-lg-12" id="cmdHistoryDiv">
-                <span class="text-light font-weight-bold">History:</span> <small class="text-muted">(click to copy)</small><br>
-                <div class="command-history" id="cmdHistory"></div>
-            </div>
         </div>
-
     </div>
 </div>
 
