--- a/monitor/web/public/css/dark.scss
+++ b/monitor/web/public/css/dark.scss
@@ -1,4 +1,4 @@
-$txadmin-dark-900: #29292A;
+$txadmin-dark-900: #141414;
 $txadmin-dark-800: lighten($txadmin-dark-900, 8%);
 $txadmin-dark-700: lighten($txadmin-dark-800, 8%);
 $txadmin-dark-600: lighten($txadmin-dark-700, 8%);
