--- a/monitor/web/parts/header.ejs
+++ b/monitor/web/parts/header.ejs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="txAdmin - remotely Manage & Monitor your GTA5 FiveM Server">
     <meta name="author" content="André Tabarra">
-    <title>txAdmin</title>
+    <title>qb-Admin</title>
     <!--style-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.0/css/simple-line-icons.min.css" 
         integrity="sha512-yxSQDoat2NPQ9U4mKdYra2YNenVsnRuGxVvyrirmrDKzwOdxKJVqkDEvQ17pL/PJ6B7n2n77Xm6d62bMjCBqCQ==" 
@@ -54,14 +54,14 @@
         <% if (isWebInterface) { %>
             <div class="c-sidebar-brand d-md-down-none">
                 <a href="/">
-                    <img class="c-sidebar-brand-full" src="img/txadmingold.png" width="118" alt="qb-Admin Logo">
+                    <img class="c-sidebar-brand-full" src="img/txadminred.png" width="118" alt="qb-Admin Logo">
                     <img class="c-sidebar-brand-minimized" src="img/tx2.gif" width="30" height="30" alt="qb-Admin Logo">
                 </a>
             </div>
         <% } %>
         <ul class="c-sidebar-nav">
             <li class="c-sidebar-nav-title font-size-larger">
-                Profile: <%= serverProfile %>
+                QB-Admin Panel
             </li>
 
             <!-- <li class="c-sidebar-nav-item c-sidebar-nav-dropdown">
@@ -171,7 +171,7 @@
             <!-- Sidebar footer -->
             <% if (isWebInterface) { %>
                 <li class="c-sidebar-nav-divider"></li>
-                <li class="c-sidebar-nav-title mt-auto">Host System Usage</li>
+                <li class="c-sidebar-nav-title mt-auto">QB System Usage</li>
                 <li class="c-sidebar-nav-item px-3 d-compact-none c-d-minimized-none">
                     <div class="text-uppercase mb-1">
                         <small>
