--- a/monitor/web/parts/footer.ejs
+++ b/monitor/web/parts/footer.ejs
@@ -8,16 +8,15 @@
                 <footer class="c-footer text-center">
                     <div class="mx-auto d-md-none"> <strong>v<%= txAdminVersion %></strong> atop FXServer <strong><%= fxServerVersion %></strong></div>
                     <div class="d-sm-down-none"> 
-                        &copy; 2019-<%= (new Date).getUTCFullYear() %>
-                        <a href="https://github.com/tabarra" class="credit-links" target="_blank">Tabarra</a>, under 
-                        <a href="https://github.com/tabarra/txAdmin/blob/master/LICENSE" class="credit-links" target="_blank">MIT License</a>
+                        <!-- &copy; 2019-<%= (new Date).getUTCFullYear() %> -->
+                        <a href="https://github.com/Marshxan/qb-txadmin" class="credit-links" target="_blank">qb-Theme</a> 
                     </div>
-                    <div class="ml-auto d-sm-down-none"> 
+                    <!-- <div class="ml-auto d-sm-down-none"> 
                         <% if (txaOutdated || fxsOutdated) { %>
                             <strong class="text-danger">(outdated)</strong>
                         <% } %>
                         <strong>v<%= txAdminVersion %></strong> atop FXServer <strong><%= fxServerVersion %></strong>
-                    </div>
+                    </div> -->
                 </footer>
             <% } %>
         </div>
