--- a/monitor/web/parts/footer.ejs
+++ b/monitor/web/parts/footer.ejs
@@ -9,7 +9,7 @@
                     <div class="mx-auto d-md-none"> <strong>v<%= txAdminVersion %></strong> atop FXServer <strong><%= fxServerVersion %></strong></div>
                     <div class="d-sm-down-none"> 
                         <!-- &copy; 2019-<%= (new Date).getUTCFullYear() %> -->
-                        <a href="https://github.com/Marshxan/qb-txadmin" class="credit-links" target="_blank">qb-Theme</a> 
+                        <a href="https://github.com/Marshxan/qb-txadmin" class="credit-links" target="_blank">qb-theme</a> 
                     </div>
                     <!-- <div class="ml-auto d-sm-down-none"> 
                         <% if (txaOutdated || fxsOutdated) { %>
